07-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resources-demo
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      # soft limit
      requests:
        memory: "68Mi"
        cpu: "100m" # 1/10th of cpu
       # provide equal or more than requests
      # hard limit
      limits:
        memory: "100Mi"
        cpu: "120m"
